--- a/Alpha/Alpha/Stily.css
+++ b/Alpha/Alpha/Stily.css
@@ -15,10 +15,10 @@ button{
 
 
 .main {
-	position: relative;
+	position: absolute;
 	width: 80%;
 	height: 80%;
-	top: 5%;
+	top: 10%;
 	left: 10%;
 }
 
@@ -32,8 +32,8 @@ button{
 }
 
 .sec {
-	position: relative;
-	top: 13%;
+	position: absolute;
+	top: 100%;
 	width: 20%;
 	height: 30%;
 	display: inline-block;
