--- a/AlphaAbsolute/Stily.css
+++ b/AlphaAbsolute/Stily.css
@@ -13,6 +13,30 @@ button{
 
 }
 
+#sideBar{
+	position: absolute;
+	width:8%;
+	height: 80%;
+	top 10%;
+	background-color: gray;
+	
+}
+
+.sideBarElement{
+	background-color: gray;
+	text-align: center;
+	width: 100%;
+	height: 5%;
+	color: black;
+}
+
+.sideInput{
+	background-color: gray;
+	text-align: center;
+	width: 100%;
+	height: 100%;
+	color: black;
+}
 
 .main {
 	position: absolute;
